--- a/Safia website/styles/main.css
+++ b/Safia website/styles/main.css
@@ -1,7 +1,25 @@
 body {
     background-color: #dadbdf;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1 {
+    font-size: 56px;
+    line-height: 64px;
   }
-  
-  
-  
+  h2 {
+    font-size: 48px;
+    line-height: 64px;
+  }
+  h3 {
+    font-size: 36px;
+    line-height: 40px;
+  }
+  h4 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  h5 {
+    font-size: 18px;
+    line-height: 28px;
+  }
