--- a/Safia website/styles/main.css
+++ b/Safia website/styles/main.css
@@ -17,6 +17,9 @@
     --clr-neutral-600: #4e5a85;
     --clr-neutral-500: #7e8bb6;
     --clr-neutral-300: #ccd2e9;
+
+    --page-px: 190px;
+    --page-px-mini: 80px;
 }
 
 body {
