--- a/Safia website/styles/hero.css
+++ b/Safia website/styles/hero.css
@@ -1,15 +1,29 @@
 #hero {
-    background-color: var(--clr-neutral);
     padding: 64px 0;
 }
 
 #hero .info {
     width: calc(100% - 2 * var(--page-px));
-    margin: 0 auto
+    margin: 0 auto;
+    display: flex;
+    color: white;
+    justify-content: space-around;
+    align-items: center;
 }
 
-#hero .info .info__title{
-    font-size: 54px;
+#hero .info .info__title {
+    font-size: 64px;
     line-height: 80px;
     color: var(--clr-white);
+    width: 50%;
+}
+
+#hero .info .info__description {
+    font-size: 20px;
+    line-height: 32px;
+    letter-spacing: -0.02em;
+    color: var(--clr-neutral-500);
+    margin-bottom: 32px;
+
+
 }
