--- a/Safia website/styles/main.css
+++ b/Safia website/styles/main.css
@@ -24,8 +24,13 @@
 }
 
 body {
-    background-color: #dadbdf;
+    background-color: var(--clr-neutral);
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+section {
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 h1 {
