--- a/Safia website/styles/components/button.css
+++ b/Safia website/styles/components/button.css
@@ -1,7 +1,10 @@
 .btn {
+    --btn-clr-bg: var(--clr-neutral-600);
+    --btn-clr-text: var(--clr-white);
+
     border: none;
-    background-color: var(--clr-neutral-600);
-    color: var(--clr-white);
+    background-color: var(--btn-clr-bg);
+    color: var(--btn-clr-text);
     padding: 16px 24px;
     border-radius: 8px;
     cursor: pointer;
@@ -9,7 +12,18 @@
 }
 
 .btn:hover {
+    --btn-clr-bg: var(--clr-white);
+    --btn-clr-text: var(--clr-neutral-600);
+
+}
+
+.btn.btn-primary {
+    background-color: var(--clr-primary-600);
+    color: var(--clr-white);
+}
+
+.btn.btn-primary:hover {
     background-color: var(--clr-white);
-    color: var(--clr-neutral-600);
+    color: var(--clr-primary-600);
 
 }
