--- a/Safia website/styles/hero.css
+++ b/Safia website/styles/hero.css
@@ -11,15 +11,16 @@
     justify-content: space-between;
 }
 
-.wrap{
-    width: max-content;
-}
 
 #hero .info .info__title {
     font-size: 64px;
     line-height: 80px;
     color: var(--clr-white);
-    /* width: 50%; */
+    width: 50%;
+}
+
+#hero .info .info__wrapper {
+    width: 35%;
 }
 
 #hero .info .info__description {
