--- a/Safia website/styles/hero.css
+++ b/Safia website/styles/hero.css
@@ -9,6 +9,7 @@
     color: white;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 72px;
 }
 
 
@@ -29,4 +30,9 @@
     letter-spacing: -0.02em;
     color: var(--clr-neutral-500);
     margin-bottom: 32px;
+}
+
+#hero .hero__img {
+    width: calc(100% - 2 * var(--page-px));
+    margin: 0 auto;
 }
