--- a/Safia website/styles/main.css
+++ b/Safia website/styles/main.css
@@ -28,11 +28,7 @@ body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-section {
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
+/* Typography */
 h1 {
     font-size: 56px;
     line-height: 64px;
@@ -56,4 +52,24 @@ h4 {
 h5 {
     font-size: 18px;
     line-height: 28px;
+}
+
+/* Section setup */
+.section {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.section .section__title {
+    color: var(--clr-white);
+    text-align: center;
+    margin-bottom: 96px;
+}
+
+.section .section__sub-title {
+    color: var(--clr-neutral-500);
+    text-align: center;
+    margin: 0px;
+    font-weight: 300;
+    letter-spacing: 1px;
 }
