fihx html and update css

--- a/Safia website/styles/pricing.css
+++ b/Safia website/styles/pricing.css
@@ -1,12 +1,37 @@
 /* #pricing .pricing__row{} */
 
-#pricing .plan{
+#pricing .plan {
     background-color: var(--clr-neutral-800);
     box-shadow: 0px 35px 45px rgba(7, 14, 39, 0.05);
     border-radius: 16px;
     padding: 48px;
 }
 
-#pricing .plan .plan__name{
+#pricing .plan .plan__name {
     font-size: 20px;
+    line-height: 32px;
+    color: var(--clr-neutral-500);
+    margin-bottom: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    /* font-weight: 300px; */
+}
+
+#pricing .plan .plan__price {
+    font-size: 56px;
+    line-height: 64px;
+    color: var(--clr-white);
+    margin-bottom: 48px;
+}
+
+#pricing .plan .plan__price .sign{
+    font-size: 56px;
+    line-height: 64px;
+    color: var(--clr-neutral-600);
+    margin-bottom: 48px;
+}
+
+#pricing .plan .plan__divider {
+ height: 2px;
+ background-color: var(--clr-neutral-600);
 }
