--- a/Safia website/styles/index.css
+++ b/Safia website/styles/index.css
@@ -1,5 +1,6 @@
 @import url('reset.css');
 @import url('main.css');
+@import url('components/button.css');
 @import url('header.css');
 @import url('hero.css');
 @import url('how-it-works.css');
