--- a/Safia website/styles/pricing.css
+++ b/Safia website/styles/pricing.css
@@ -1,10 +1,30 @@
-/* #pricing .pricing__row{} */
+#pricing .pricing__row {
+    display: flex;
+    gap: 40px;
+    align-items: flex-end;
+}
 
 #pricing .plan {
+    width: 100%;
     background-color: var(--clr-neutral-800);
     box-shadow: 0px 35px 45px rgba(7, 14, 39, 0.05);
     border-radius: 16px;
     padding: 48px;
+}
+
+#pricing .plan.plan--promoted {
+    margin-bottom: 64px;
+    background-color: var(--clr-neutral-700);
+}
+
+#pricing .plan.plan--promoted .plan__cta {
+    background-color: var(--clr-primary-600);
+    color: var(--clr-white);
+}
+
+#pricing .plan.plan--promoted .plan__cta:hover {
+    background-color: var(--clr-white);
+    color: var(--clr-primary-600);
 }
 
 #pricing .plan .plan__name {
@@ -24,7 +44,7 @@
     margin-bottom: 48px;
 }
 
-#pricing .plan .plan__price .sign{
+#pricing .plan .plan__price .sign {
     font-size: 56px;
     line-height: 64px;
     color: var(--clr-neutral-600);
@@ -32,26 +52,26 @@
 }
 
 #pricing .plan .plan__divider {
- height: 2px;
- background-color: var(--clr-neutral-600);
- margin-bottom: 48px;
+    height: 2px;
+    background-color: var(--clr-neutral-600);
+    margin-bottom: 48px;
 }
 
-#pricing .plan .features{
-margin-bottom: 48px;
+#pricing .plan .features {
+    margin-bottom: 48px;
 }
 
 
-#pricing .plan .features .feature{
+#pricing .plan .features .feature {
     display: flex;
     align-items: center;
     gap: 12px;
 }
 
-#pricing .plan .features .feature:not(:last-child){
+#pricing .plan .features .feature:not(:last-child) {
     margin-bottom: 24px;
 }
 
-#pricing .plan .features .feature .feature__text{
+#pricing .plan .features .feature .feature__text {
     color: var(--clr-white);
 }
