--- a/Safia website/styles/features.css
+++ b/Safia website/styles/features.css
@@ -1,3 +1,8 @@
+#features {
+    /* max-width: 840px; */
+    width: calc(100% - 2* 300px);
+}
+
 #features .features__title {
     color: var(--clr-white);
     margin-bottom: 16px;
@@ -8,7 +13,52 @@
     margin-bottom: 32px;
 }
 
-#features .features__grid{
+#features .features__grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 40px 32px;
+}
+
+#features .feat {
+    background-color: transparent;
+    overflow: hidden;
+    border: 2px solid var(--clr-neutral-700);
+    border-radius: 16px;
+    padding: 32px;
+    position: relative;
+    transition: all 300ms ease-in-out;
+    top: 0;
+}
+
+#features .feat:hover {
+    top: -12px;
+    box-shadow: 0 10px 15px -3px rgb(255 255 255 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+
+#features .feat::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: var(--clr-neutral-800);
+    opacity: 1;
+    z-index: -1;
+}
+
+#features .feat .feat__icon {
+    width: 48px;
+    height: 48px;
+    margin-bottom: 32px;
+}
+
+#features .feat .feat__title {
+    color: var(--clr-white);
+    margin-bottom: 16px;
+}
+
+#features .feat .feat__desc {
+    color: var(--clr-neutral-300);
+    margin-bottom: 16px;
 }
