--- a/Safia website/styles/features.css
+++ b/Safia website/styles/features.css
@@ -35,7 +35,7 @@
     box-shadow: 0 10px 15px -3px rgb(255 255 255 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-#features .feat::after {
+#features .feat:hover::after {
     content: "";
     position: absolute;
     top: 0;
