--- a/Safia website/styles/how-it-works.css
+++ b/Safia website/styles/how-it-works.css
@@ -1,4 +1,3 @@
-
 #how-it-works .hiw__row {
     width: calc(100% - 2 * var(--page-px));
     margin: 0 auto;
@@ -7,21 +6,22 @@
     gap: 110px;
 }
 
-#how-it-works .hiw__row:not(:last-child){
+#how-it-works .hiw__row:not(:last-child) {
     margin-bottom: 96px;
 }
 
 #how-it-works .hiw__row .row__img {
+    --rotate-deg: 10deg;
     width: 50%;
     max-width: 550px;
+    transition: all 500ms ease-in-out;
 
 
 }
 
 #how-it-works .hiw__row .row__img:hover {
-    transform: scale(1.1) rotate(-10deg);
-    transition: all 500ms ease-in-out;
-    
+    transform: scale(1.1) rotate(var(--rotate-deg));
+
 
 }
 
