--- a/Safia website/styles/how-it-works.css
+++ b/Safia website/styles/how-it-works.css
@@ -15,8 +15,7 @@
     width: 50%;
     max-width: 550px;
     transition: all 500ms ease-in-out;
-
-
+    transform-origin: top right;
 }
 
 #how-it-works .hiw__row .row__img:hover {
