--- a/Safia website/styles/index.css
+++ b/Safia website/styles/index.css
@@ -4,5 +4,6 @@
 @import url('header.css');
 @import url('features.css');
 @import url('hero.css');
+@import url('trial.css');
 @import url('how-it-works.css');
 @import url('pricing.css');
